--- a/index.html
+++ b/index.html
@@ -8,6 +8,65 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header class=""></header>
+    <header class="Title">
+        <h1 class="siteTitle">Enter Site Title</h1>
+        <h6 class="siteSlogan">Enter site Slogan</h6>
+    </header>
+
+    <main>
+        <div class="up">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">New Page 1</a></li>
+                <li><a href="">New Page 2</a></li>
+                <li><a href="">New Page 3</a></li>
+                <li><a href="">New Page 4</a></li>
+            </ul>
+        </div>
+
+        <div class="centreLeft">
+            <h3>Main Menu</h3>
+            <ul>
+                <li><a href="">Menu Item 1</a></li>
+                <li><a href="">Menu Item 2</a></li>
+                <li><a href="">Menu Item 3</a></li>
+                <li><a href="">Menu Item 4</a></li>
+                <li><a href="">Menu Item 5</a></li>
+                <li><a href="">Menu Item 6</a></li>
+                <li><a href="">Menu Item 7</a></li>
+                <li><a href="">Menu Item 8</a></li>
+                <li><a href="">Menu Item 9</a></li>
+            </ul>
+        </div>
+        <div class="centreCentre">
+            <h3>Gallery</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error accusantium veniam illum commodi delectus dicta consequatur? Officiis natus asperiores itaque dolore incidunt dolorum, suscipit tempore necessitatibus a ut corporis nulla reprehenderit quos? Laboriosam, corporis facilis illum enim ratione tenetur soluta, odit officia, commodi eligendi eum. Quae nesciunt, magnam vel sint praesentium et. Velit excepturi praesentium esse voluptatem, aspernatur provident, fugiat facilis odio, possimus accusantium cupiditate commodi facere dignissimos itaque explicabo adipisci nisi a voluptatum ab molestiae vel nihil necessitatibus nam unde! Ratione quas minus ab vitae cupiditate aut ipsum tenetur eaque et odit. Commodi iusto ad, aliquam officiis eaque voluptas doloremque ab, praesentium sit accusantium harum hic adipisci animi quas beatae aspernatur cumque, rerum dolorum quibusdam. Reiciendis quasi cupiditate eveniet aliquam consectetur earum iure? Ratione laudantium ducimus est voluptatem aperiam temporibus voluptate perspiciatis sapiente possimus maxime? Nobis molestias exercitationem autem voluptatibus nesciunt velit ex cupiditate possimus sunt optio architecto quaerat recusandae placeat tempore consequatur labore eligendi in nemo, sit esse sequi odit saepe totam dolores. Cupiditate iure ipsam distinctio. Omnis consequuntur sit rem perspiciatis, libero at deserunt voluptas dolor numquam. In itaque exercitationem quibusdam, officia eius nam, nisi numquam nesciunt repellat sequi delectus ipsam error dolore praesentium vero repellendus necessitatibus?</p>
+        </div>
+
+        <div class="bottomLeft">
+            <h3>Block</h3>
+            <p>Enter block content here....</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum veritatis nostrum sint officia ducimus ex ipsam nemo culpa enim recusandae!</p>
+        </div>
+
+        <div class="bottomMiddle">
+            <h3>Subscription</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum temporibus quae natus deleniti? Aliquam voluptates enim harum aut! Aspernatur similique tenetur velit expedita voluptas pariatur dolorum ipsum. Reprehenderit, dolorem exercitationem! Doloremque ipsa laborum animi perspiciatis excepturi explicabo, sapiente fuga rem esse delectus aliquid rerum! Maxime odio sapiente consequuntur quam harum.</p>
+            <button>Read more</button>
+        </div>
+
+        <div class="bottomRight">
+            <h3>Other Serivces</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, placeat magni aperiam quia laudantium vitae sit esse saepe adipisci nam dolores illo natus, expedita autem unde sunt harum amet quo neque deserunt impedit! Atque eligendi fugit nobis ut tempore. Autem debitis explicabo commodi exercitationem accusantium adipisci iste sit totam inventore?</p>
+        </div>
+        
+
+        
+    </main>
+
+
+
+
 </body>
 </html>
